# basic-renderer

./: .gitignore  .gitmodules  Base.h  CMakeLists.txt  Dependencies.cmake  README.md  imgui.ini  premake5.lua
Engine/: CMakeLists.txt
Engine/include/: BufferLayout.h  Engine.h  Renderer.h  Shader.h  VertexArray.h  VertexBuffer.h  enginepch.h
Engine/include/Camera/: Camera.h  PerspectiveCamera.h
Engine/include/Common/Core/: Application.h  Assert.h  Base.h  Library.h  Log.h  Timer.h  Window.h
Engine/include/Common/Event/: Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Engine/include/Common/Input/: Input.h  KeyCodes.h  MouseCodes.h
Engine/include/Common/Layer/: DrawUtils.h  GuiLayer.h  Layer.h  LayerStack.h
Engine/include/Common/Renderer/: GraphicsContext.h  Renderer.h  RendererAPI.h  RendererCommand.h  RendererUtils.h
Engine/include/Common/Scene/: Scene.h  Viewport.h
Engine/include/Context/: RenderContext.h  Viewport.h
Engine/include/Core/: Application.h  Assert.h  FileDialogs.h  Layer.h  LayerStack.h  Library.h  Log.h  Timestep.h  Window.h
Engine/include/Event/: Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Engine/include/Gui/: GuiLayer.h
Engine/include/Input/: Input.h
Engine/include/Layer/: DrawUtils.h  GuiLayer.h  Layer.h  LayerStack.h
Engine/include/Material/: Material.h
Engine/include/Platform/Metal/: MetalContext.h  MetalRendererAPI.h  MetalRendererUtils.h
Engine/include/Platform/OpenGL/: OpenGLContext.h  OpenGLRendererAPI.h  OpenGLRendererUtils.h
Engine/include/Renderer/: AssimpModel.h  BufferLayout.h  Camera.h  IndexBuffer.h  Material.h  Mesh.h  Model.h  PerspectiveCamera.h  Renderer.h  RendererUtils.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h
Engine/include/Renderer/Buffer/: BufferLayout.h  FrameBuffer.h  IndexBuffer.h  VertexArray.h  VertexBuffer.h
Engine/include/Renderer/Camera/: Camera.h  OrthographicCamera.h  PerspectiveCamera.h
Engine/include/Renderer/Light/: DirectionalLight.h  EnvironmentLight.h  Light.h  PointLight.h  PositionalLight.h  ShadowCamera.h
Engine/include/Renderer/Material/: LightedMaterial.h  Material.h  OcclusionMaterial.h  PhongMaterial.h  SimpleMaterial.h
Engine/include/Renderer/Mesh/: Geometry.h  Mesh.h  MeshUtils.h
Engine/include/Renderer/Model/: AssimpModel.h  Model.h  ModelUtils.h
Engine/include/Renderer/Shader/: Shader.h
Engine/include/Renderer/Texture/: Texture.h  Texture1D.h  Texture2D.h  Texture3D.h  TextureCube.h  TextureUtils.h
Engine/include/Scene/: Scene.h  Viewport.h
Engine/include/Utils/: DrawUtils.h
Engine/src/: BufferLayout.cpp  Main.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
Engine/src/Camera/: Camera.cpp  PerspectiveCamera.cpp
Engine/src/Common/Context/: RenderContext.cpp
Engine/src/Common/Core/: Application.cpp  Log.cpp  Window.cpp
Engine/src/Common/Input/: Input.cpp
Engine/src/Common/Layer/: GuiLayer.cpp  LayerStack.cpp
Engine/src/Common/Renderer/: GraphicsContext.cpp  Renderer.cpp  RendererAPI.cpp  RendererCommand.cpp
Engine/src/Common/Scene/: Scene.cpp
Engine/src/Core/: Application.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  Window.cpp
Engine/src/Event/: KeyEvent.cpp  MouseEvent.cpp  WindowEvent.cpp
Engine/src/Gui/: GuiLayer.cpp
Engine/src/Layer/: GuiLayer.cpp
Engine/src/Renderer/: AssimpModel.cpp  BufferLayout.cpp  Camera.cpp  IndexBuffer.cpp  Mesh.cpp  PerspectiveCamera.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
Engine/src/Renderer/Buffer/: FrameBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp
Engine/src/Renderer/Camera/: Camera.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp
Engine/src/Renderer/Light/: EnvironmentLight.cpp
Engine/src/Renderer/Material/: OcclusionMaterial.cpp
Engine/src/Renderer/Mesh/: Geometry.cpp
Engine/src/Renderer/Model/: AssimpModel.cpp
Engine/src/Renderer/Shader/: Shader.cpp
Engine/src/Renderer/Texture/: Texture.cpp
Sandbox/: CMakeLists.txt
Sandbox/include/: Sandbox.h  Viewer.h  ViewerApp.h  ViewerLayer.h
Sandbox/include/Material/: BasicMaterial.h
Sandbox/include/Viewer/: Simple.h  Viewer.h  ViewerApp.h  ViewerGui.h
Sandbox/src/: Main.cpp  Sandbox.cpp  Viewer.cpp  ViewerApp.cpp  ViewerGui.cpp  ViewerLayer.cpp
Sandbox/src/Viewer/: Main.cpp  Simple.cpp  Viewer.cpp  ViewerApp.cpp  ViewerGui.cpp
resources/: CMakeLists.txt
resources/shaders/: PhongColor.glsl  SimpleColor.glsl  SimpleTexture.glsl  basic.glsl
resources/shaders/aa/: FXAA.glsl
resources/shaders/ao/: BlurFilter.glsl  SSAO.glsl
resources/shaders/ao/chunks/: PositionFromDepth.glsl
resources/shaders/base/: Simple.glsl  Simple.metal  SimpleColor.glsl  SimpleColor.metal  SimpleColorTexture.glsl  SimpleColorTexture.metal  SimpleDepth.glsl  SimpleDepthTexture.glsl  SimpleTexture.glsl  SimpleTexture.metal
resources/shaders/common/fragment/: L.fs.glsl  PN.fs.glsl  PT.fs.glsl  PTN.fs.glsl  T.fs.glsl
resources/shaders/common/light/: CompleteLight.glsl  EnvironmentLight.glsl  ShadowLight.glsl  SimpleLight.glsl
resources/shaders/common/material/: ColorTextureMaterial.glsl  PhongTextureMaterial.glsl
resources/shaders/common/matrix/: CompleteMatrix.glsl  LightMatrix.glsl
resources/shaders/common/shading/: Phong.glsl  PhongSpecular.glsl
resources/shaders/common/shadow/: DistanceSM.glsl  PCF-G.glsl  PCF.glsl  SimpleSM.glsl
resources/shaders/common/utils/: Saturate.glsl
resources/shaders/common/vertex/: P.vs.glsl  PN-S.vs.glsl  PN.vs.glsl  PT.vs.glsl  PTN-S.vs.glsl
resources/shaders/common/view/: SimpleView.glsl
resources/shaders/depth/: DepthMap.glsl  DepthMap.metal  SimpleDepthTexture.glsl
resources/shaders/depth/chunks/: BiasAngle.glsl  BiasDistance.glsl  LinearizeDepth.glsl  PCF-G.glsl  PCF.glsl  (+1 more)
resources/shaders/environment/: CubeMap.glsl  EquirectangularMap.glsl  IrradianceMap.glsl  PreFilterMap.glsl  SphericalHarmonics.glsl  SphericalHarmonicsSampling.glsl
resources/shaders/filters/: BlurFilter.glsl
resources/shaders/phong/: PhongColor.glsl  PhongColor.metal  PhongColorShadow.glsl  PhongTexture.glsl  PhongTextureShadow.glsl
(+172 files in other folders)
